# Sistemas-Embebidos

./: .gitignore  README.md
Examen/: pregunta2.py
Proyecto1/SmartView/: README.md
Proyecto1/SmartView/server/: index.js
Proyecto1/SmartView/server/app/: login.html  smartView.html  test.html
Proyecto1/SmartView/server/app/public/css/: navegation.css
Proyecto1/SmartView/server/app/public/js/: smartView.js
Proyectos/Proyecto1/BackEnd/: .gitignore  CMakeLists.txt  Makefile  README.md
Proyectos/Proyecto1/BackEnd/back-end/: CMakeLists.txt  Makefile  rpi_server.c  server.c
Proyectos/Proyecto1/BackEnd/include/: hello.h  rpi_server.h  snap.h
Proyectos/Proyecto1/BackEnd/lib/: CMakeLists.txt  Makefile  gpio.c
Proyectos/Proyecto1/BackEnd/snap/: CMakeLists.txt  snap.cpp
Proyectos/Proyecto1/BackEnd/test/ffi/: main.py
Proyectos/Proyecto1/BackEnd/test/ipc/: client.js  client.py  client2.py  client3.py
Proyectos/Proyecto1/SmartView/server/app/public/css/: smartView.css
Proyectos/Proyecto1/SmartView/server/app/public/js/: login.js  test.js
Proyectos/Proyecto2/: README.md
Proyectos/Proyecto2/Codigo/: alarma.h  alarma.qsys  alarma_pines.h  main.c
Proyectos/Proyecto3/: .gitignore  README.md
Proyectos/Proyecto3/ViewSC/: README.md  const.js  index.js  package-lock.json  package.json
Proyectos/Proyecto3/ViewSC/app/: smartView.html  test.html
Proyectos/Proyecto3/ViewSC/app/public/css/: smartView.css
Proyectos/Proyecto3/ViewSC/app/public/js/: dates.txt  history.txt  smartView.js  test.js
Talleres/: readme.md
Talleres/Taller1/: Ejercicio1.txt
Talleres/Taller1/Ej2/: Ejercicios.tar
Talleres/Taller1/Ej2/Ej2/: Ejercicio2.txt
Talleres/Taller1/Ej3/: script.x
Talleres/Taller1/Ej4/: laodisea00homeuoft_djvu.txt
Talleres/Taller10/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
Talleres/Taller10/include/: gpio.h
Talleres/Taller10/lib/: Makefile.am  Makefile.in  gpio.c
Talleres/Taller10/m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4
Talleres/Taller10/src/: Makefile.am  Makefile.in  main.c
Talleres/Taller2/: biblioteca.c  biblioteca.h  calcu_estatic  calculadora.c  dynamic_bib
Talleres/Taller3/: Makefile
Talleres/Taller3/include/: operaciones.h
Talleres/Taller3/lib/: Makefile  operaciones.c
Talleres/Taller3/src/: Makefile  calculadora.c
Talleres/Taller4/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
Talleres/Taller4/include/: operaciones.h
Talleres/Taller4/lib/: Makefile.am  Makefile.in  operaciones.c
Talleres/Taller4/m4/: libtool.m4
Talleres/Taller4/src/: Makefile.am  Makefile.am.save  Makefile.in  calculadora.c
Talleres/Taller5/: CMakeLists.txt
Talleres/Taller5/lib/: operaciones.c
Talleres/Taller7/: README.md
Talleres/Taller7/code/: CMakeLists.txt  compile.sh  env  hello.c  sayhello
Talleres/Taller7/code/conf/: bblayers.conf  local.conf
Talleres/Taller7/code/include/: gpio.h
Talleres/Taller7/code/lib/: CMakeLists.txt  gpio.c
Talleres/Taller7/code/test/: CMakeLists.txt  main.c
Talleres/Taller8/code/: Makefile  commands  memory.c
Talleres/Taller9/: Makefile.in  config.h.in  configure  configure.ac
Talleres/Taller9/include/: timer.h
Talleres/Taller9/lib/: Makefile.am  Makefile.in  timer.c
Talleres/Taller9/m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
Talleres/Taller9/src/: Makefile.am  Makefile.in  main.c
Talleres/TallerKPN/: factorialKPN.py
